[package]
name = "domino"
version = "0.0.1"
authors = ["Bastien Orivel <eijebong@bananium.fr>"]
description = "A small, simple DOM implementation on top of quick-xml. Fork of minidom not targetted at XMPP only"
repository = "https://github.com/Eijebong/domino"
documentation = "https://docs.rs/domino"
keywords = ["xml"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
quick-xml = "0.22.0"
